chore(sim): matching unit tests